Update LagAnalyzer.java